--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,16 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenido</h1>
+    <p><a href='@Url.Action("SelectIndumentaria")'>Seleccionar Indumentaria</a></p>
+    @if(ViewBag.EquipoIndumentaria != null){
+    @foreach (var item in ViewBag.EquipoIndumentaria.Keys)
+    {
+        <p>El nombre del Equipo es: @item</p>
+        <p>Los datos faltantes de la Indumentaria son: @ViewBag.EquipoIndumentaria.Values</p>
+    }
+    }
+    else{
+        <p>@ViewBag.Error</p>
+    }
 </div>
