--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,11 @@ html {
 body {
   margin-bottom: 60px;
 }
+#Formulario{
+  float: left;
+  border: 5px solid black;
+}
+div img{
+  width: 7.5%;
+  height: auto;
+}
