--- a/Views/Home/SelectIndumentaria.cshtml
+++ b/Views/Home/SelectIndumentaria.cshtml
@@ -2,7 +2,7 @@
 
 }
 <h1>@ViewData["Select Indumentaria"]</h1>
-<p>Seleccione su indumentaria</p>
+<div id = "Seleccion"><p>Seleccione su indumentaria</p></div>
 <form action='@Url.Action("GuardarIndumentaria")'>
     <h3>Seleccione su equipo:</h3><br>
 <div id="Formulario">
